hphp/hack/test/decl/trait_use_conflict_resolution.php
<?hh // strict

class C {
  use T { x as y; }
}
